--- a/index.html
+++ b/index.html
@@ -4,194 +4,25 @@
 *Description:
 *This is the main code of the QRCodeList website.
 * @Author hujiahao
-* @Create 2023/8/1
-* @Version 3.0
+* @Create 2023/8/2
+* @Version 4.0
 -->
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>微信拓客活动</title>
   <meta charset="UTF-8">
-  <style>
-    body {
-      background-image: url('images/background0.png');
-      font-family: "Microsoft YaHei", "PingFang SC", "-apple-system", "Helvetica Neue", Helvetica, Tahoma, Arial, sans-serif;
-    }
-    .container {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-around;
-      align-items: center;
-      max-width: 1000px;
-      margin: 0 auto;
-      padding: 20px;
-    }
-
-    .link-container {
-      margin-bottom: 30px;
-      display: flex;
-    }
-
-    .link {
-      text-align: center;
-      text-decoration: none;
-      color: #333;
-      display: inline-block;
-      padding: 10px;
-      background-color: rgba(255,255,255,0.7);
-      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.3);
-      border-radius: 8px;
-      margin-right: 10px;
-      flex-grow: 1;
-      min-width: 150px;
-      height: 70px;
-      padding-top: 12%;
-      padding-left: 28px;
-      padding-right: 28px;
-    }
-
-    .link span {
-      font-size: 40px;
-      line-height: 40px;
-      font-family: 华文新魏;
-      margin-top: 100px;
-    }
-    h1 {
-      text-align: center;
-      font-family: 幼圆;
-      font-size: 50px; /* Increase the font size of the title */
-      margin-bottom: 70px; /* Increase the spacing below the title */
-    }
-
-  </style>
-
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>微信通讯录</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 <div class="container">
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000002&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>安全保卫部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000013&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>办公室</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000029&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>财务管理部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000033&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>长三角金融研究院</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000012&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>出纳管理部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000035&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>单证中心</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000040&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>党委宣传部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000010&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>党务工作部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000034&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>风险管理部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000006&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>个人数字金融部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000018&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>工会</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000041&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>工会工作部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000003&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>公司金融部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000039&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>行长室</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000014&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>后勤服务中心</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000027&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>纪委办公室</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000007&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>交易银行部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000031&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>金融机构部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000030&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>金融市场部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000011&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>内控与法律合规部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000016&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>培训中心</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000023&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>普惠金融事业部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000025&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>渠道与运营管理部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000008&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>人力资源部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000042&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>人力资源部中银研修中心</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000036&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>上海研修院</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000017&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>审计部上海分部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000021&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>授信管理部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000026&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>私人银行部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000020&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>投行资管部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000019&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>托管业务部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000024&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>消费金融部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000009&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>信息科技部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000037&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>信息科技运营中心</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000028&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>行政事业机构部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000005&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>业务运营中心</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000032&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>银行卡部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000015&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>园区管理办公室</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000004&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>战略客户部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000022&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>支付清算部</span></a>
-  </div>
-  <div class="link-container">
-    <a href="https://che-mobile.bocins.com/#/login?userId=U22091409054588&qrCode=3120230727000038&typeFlag=0&cusUserCode=U22091409054588" class="link" data-lightbox="qrcodes"><span>总行交流</span></a>
-  <div>
+  <h1>微信通讯录</h1>
+  <input type="text" id="searchInput" placeholder="搜索联系人...">
+  <ul id="contactList">
+    <!-- 这里的内容将由JavaScript动态生成 -->
+  </ul>
 </div>
+<script src="script.js"></script>
 </body>
 </html>
